# mkd_automation

./: .gitignore  .pre-commit-config.yaml  CHECKPOINT_VALIDATION.md  CHROME_EXTENSION_ACTION_ITEMS.md  CHROME_EXTENSION_DEVELOPMENT_PLAN.md  CHROME_EXTENSION_README.md  CHROME_EXTENSION_TROUBLESHOOTING.md  CHROME_STORE_SUBMISSION.md  CLAUDE.md  CLEAN_UI_UPDATE.md  COMPLETE_GUI_HIDING.md  CONTRIBUTING.md  DAY1_COMPLETION_REPORT.md  DEPLOYMENT_ASSESSMENT.md  DESKTOP_AUTOMATION_README.md  DEVELOPMENT_PLAN.md  FIX_SUMMARY.md  GEMINI.md  GUI_HIDING_UPDATE.md  GUI_TESTING.md  HANDOVER_SUMMARY.md  LICENSE  MOTION_RECORDING.md  Makefile  PRIVACY_POLICY.md  README.md  REPLAY_ENHANCEMENT_COMPLETE.md  REPLAY_STRATEGIES.md  REPLAY_USAGE_GUIDE.md  STATUS.md  TESTING_GUIDE.md  USAGE_GUIDE.md  USAGE_GUIDE_GITHUB_PAGES.md  WEEK2_STATUS.md  WEEK3_PLANNING.md  WEEK4_PLANNING.md  WEEK4_TEST_REPORT.md  WEEK5_PLANNING.md  WEEK5_RELEASE_NOTES.md  WEEK5_STATUS_REPORT.md  (+48 more)
.github/workflows/: build-multiplatform.yml  deploy-pages.yml
chrome-extension/: EXTENSION_READY.md  LICENSE  README.md  manifest.json  native-host-manifest.json  test-popup.html
chrome-extension/debug/: connection_diagnostic.js  debug_logger.js
chrome-extension/src/: background.js  content.js  messaging.js
chrome-extension/src/debug/: connection_diagnostic.js  debug_logger.js  verbose_logger.js
chrome-extension/src/popup/: popup-simple.html  popup.css  popup.html  popup.js
chrome-extension/store_assets/: screenshot_guide.md  store_listing.md  upload_checklist.md
chrome-extension/tests/: chrome_store_upload_test.py  csp_validation_report.md  csp_validation_results.json  e2e_test.py  input_validation_test_guide.md  malicious_input_test_cases.json  security_audit.py  security_audit_results.json  test_chrome_connection.py  test_input_validation.py  test_message_protocol.py  test_suite.js
chrome-extension/tests/archive/: chrome_store_upload_test.py
docker/: Dockerfile.ubuntu22
docs/: ARCHITECTURE_V2.md  BROWSER_AUTOMATION.md  CONVERSATION_UI.md  DAY1_TEST_PLAN.md  ERS.md  EXECUTION_ROADMAP.md  INSTALL.md  TEST_DEVELOPMENT_PLAN.md  WEEK1_CHECKPOINT.md  WEEK1_IMPLEMENTATION_PLAN.md
docs/api/: core_api.md  mkd_v2_api.md  playback_api.md  recording_api.md
docs/developer/: architecture.md
docs/user_guide/: mkd_v2_getting_started.md
examples/: browser_automation_demo.py  conversation_examples.py  conversation_ui_examples.md  desktop_automation_examples.py
examples/mkd_v2/: README.md  advanced_automation_example.py  basic_recording_playback.py  performance_optimization_demo.py
release/: release_info.json
release_multiplatform/: BUILD_INSTRUCTIONS.md  README.md  build_summary.json  release_info.json
scripts/: daily_health_check.py  milestone_validator.py  run_day1_tests.py  system_check.py
self_tests/: run_self_tests.py
self_tests/reports/: test_report_20250830_151515.json  test_report_20250830_151737.json  test_report_20250830_152019.json  test_summary_20250830_151515.txt  test_summary_20250830_151737.txt  test_summary_20250830_152019.txt
src/: main.py
src/mkd/: _version.py  gui_launcher.py
src/mkd/browser/: __init__.py  actions.py  controller.py  emailjs_automation.py  integration.py  recorder.py
src/mkd/cli/: browser_cli.py
src/mkd/core/: config_manager.py  constants.py  script.py  session.py  session_manager.py
src/mkd/data/: models.py  script_storage.py
src/mkd/desktop/: __init__.py  actions.py  application_manager.py  controller.py  file_operations.py  windows_automation.py
src/mkd/platform/: base.py  detector.py  linux.py  macos.py  windows.py
src/mkd/playback/: action_executor.py  playback_engine.py
src/mkd/recording/: input_capturer.py  recording_engine.py
src/mkd/replay/: __init__.py  action_replay.py  replay_manager.py  visual_replay.py
src/mkd/ui/: conversation_panel.py  instruction_parser.py  main_gui.py
src/mkd_v2/: __init__.py  exceptions.py
src/mkd_v2/advanced_playback/: __init__.py  adaptive_executor.py  advanced_playback_engine.py  context_verifier.py  performance_optimizer.py  recovery_engine.py
src/mkd_v2/automation/: __init__.py  automation_engine.py  element_detector.py  intelligent_automation.py  window_manager.py
src/mkd_v2/cli/: __init__.py  command_router.py  gui_launcher.py  interactive_mode.py  main_cli.py
src/mkd_v2/config/: default_config.json
src/mkd_v2/ui/: __init__.py  (+2 more)
test-results/: day1-report.html  day1-summary.json
test_results/: latest_summary.json  run_run_462a2b07_1756354264.json  run_run_9ffa832e_1756354196.json  run_run_fee31226_1756354737.json
tests/: comprehensive_test_suite.py  conftest.py
tests/chrome_extension/: setup.js  test_ui_controls.test.js
tests/comprehensive_logs/: bug_report_20250827_222232.json  detailed_results_20250827_222232.json  detailed_results_20250827_222330.json  test_report_20250827_222232.json  test_report_20250827_222330.json
tests/milestones/: test_native_host_windows.py  test_security_audit.py
tests/unit/: test_day1_infrastructure.py  test_visual_indicators.py  test_week1_integration.py
tests/week2_validation/: README.md  __init__.py  run_all_tests.py  test_chrome_integration.py  test_input_capture.py  test_playback_engine.py  test_ui_automation.py  test_visual_overlays.py
tests/week3_integration/: test_logger.py  test_plan.md  test_suite.py
tests/week3_intelligence/: run_intelligence_tests.py  test_context_detector.py  test_intelligent_automation.py  test_pattern_analyzer.py  test_smart_recorder.py
tests/week4_integration/: test_logger.py  test_results_summary.json  test_suite.py
tests/week5_integration/: simplified_test_suite.py  test_suite.py
web_gui/: IMPLEMENTATION_SUMMARY.md  INTELLIGENT_RECORDING_README.md  README.md  backend_server.py  deployment_analysis.md  index.html  script.js  start_web_gui.py  styles.css  system_monitor.py  test_combined_capture.html  test_intelligent_recording.html  test_screen_capture.html  test_setup.py
web_gui/docs/: README.md  styles.css
web_gui/github-pages-version/: recorder.js
web_ui/: app.py  requirements.txt
web_ui/templates/: index.html
(+63 files in other folders)
